# ISM

./: .gitignore  README.md  deep-research-report.md  ism-system-plan.md  pyproject.toml
configs/experiments/: ablation_qwen7b.yaml  fixed_budget_qwen7b.yaml  fixed_budget_qwen7b_mid.yaml  smoke.yaml
docs/: README.md
docs/decisions/: 0001-config-hash-is-deployment-independent.md  0002-qasper-scoring.md
docs/evidence/: README.md
docs/evidence/ablation-qwen7b-N120/: README.md  SHA256SUMS  ablation_summary.json  environment.json
docs/evidence/ablation-qwen7b-dev/: README.md  SHA256SUMS  ablation_summary.json  condition_audit.json  environment.json
docs/evidence/ablation-qwen7b-strong/: README.md  SHA256SUMS  ablation_summary.json  environment.json
docs/evidence/compress-audit-qwen7b-v2/: README.md  SHA256SUMS  compression_audit.json  environment.json
docs/evidence/s1-qwen7b/: README.md  SHA256SUMS  (+4 more)
docs/phases/: phase-0-foundation.md  phase-2-representation.md  phase-3b-transformers-backend.md  phase-4-conditions.md  phase-5-budgets.md  phase-9-local-validation.md
docs/reviews/: paper-experiment-gaps.md
paper/: README.md  build_pdf.py  main.tex  references.bib
src/ism/: __init__.py  __main__.py  cli.py  config.py  logging.py  planning.py
tests/: test_ablation.py  test_architecture.py  test_budgets.py  test_cli.py  test_compressor.py  test_conditions.py  test_config.py  test_evaluation.py  test_fixed_budget.py  test_interventions.py  test_ism_parser.py  test_leakage.py  test_logging.py  test_planning.py  test_qasper_metrics.py  test_strong_corruption.py
(+24 files in other folders)
