[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ism-research"
version = "0.1.0"
description = "Inspectable Symbolic Compression experiment framework"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "pydantic>=2.10,<3",
  "pyyaml>=6.0.2,<7",
]

[project.scripts]
ism = "ism.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ism"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "gpu: requires a GPU",
  "network: requires network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
